@@ -1,7 +1,7 @@
 munin (work)
 
   * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
-  * Installation: Make the single python plugin use @@PYTHON@@ again.
+  * Main: Make munin-limits work properly with perl 5.6 (SF#1109039).
   * Plugins: Fix sendmail_mail{stats,traffic} autoconf handling.
   * Plugins: Fix linux/users #! line.
   * Plugins: Changed default log for generic/postfix_mailstats from syslog to
@@ -16,6 +16,7 @@ munin (work)
   * Plugins: Plugin generic/squid_cache now handles multiple caches
     (Deb#288579).
   * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).
+  * Installation: Make the single python plugin use @@PYTHON@@ again.
 
 munin (1.2.0rc1)
 
